# perfwhiz

./: .gitignore  .gitreview  .travis.yml  README.rst  create-vm-csv.sh  credentials.py  index.html  mkcdict_perf_script.py  mkcdict_plugin.py  params.json  perf-capture.py  perf-sched.py  perf_formatter.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: Makefile
doc/source/: conf.py  faq.rst  index.rst  installation.rst  overview.rst  usage.rst
perftools/: __init__.py  credentials.py  mkcdict_perf_script.py  mkcdict_plugin.py  perf-capture.py  perf-sched.py  perf_formatter.py  perfcap.py  perfmap_core.py  perfmap_kvm_exit_types.py  perfmap_sw_kvm_exits.py
perfwhiz/: __init__.py  mkcdict_perf_script.py  mkcdict_plugin.py  perf_formatter.py  perfcap.py  perfmap.py  perfmap_charts.jinja  perfmap_common.py  perfmap_core.py  perfmap_heatmaps.jinja  perfmap_kvm_exit_types.jinja  perfmap_kvm_exit_types.py  perfmap_sw_kvm_exits.py
