[metadata]
name = perftools
summary = Tools for Linux perf
description-file =
    README.rst
author = Alec Hothan
author-email = ahothan@cisco.com
home-page = https://github.com/cisco-oss-eng/perftools
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    perftools

[extras]
analyzer =
    pandas>=0.17
    bokeh>=0.10
    msgpack-python>=0.4.6
    numpy>=1.10.1

[wheel]
universal = 1
