[metadata]
name = perfwhiz
summary = Tools for Linux perf
description-file =
    README.rst
author = Alec Hothan
author-email = ahothan@cisco.com
home-page = https://github.com/cisco-oss-eng/perfwhiz
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    perfwhiz

package_data =
    perfwhiz =
        perfmap_charts.jinja

[extras]
analyzer =
    pandas>=0.17
    bokeh>=0.10
    numpy>=1.10.1

[entry_points]
console_scripts =
    perfcap = perfwhiz.perfcap:main
    perfmap = perfwhiz.perfmap:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
